# Chess

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Chess.code-workspace  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 085387eae84b_achievements_awarded_table.py  0f765d34883a_move_stats_v2_columns.py  2c072e7b6738_move_stats_table.py  5c6babe9b843_baseline_players_games_rating_snapshots_.py  bbc799a88736_games_uuid_unique_per_player.py
scripts/: container_startup.py  rebuild-chess.sh
src/chess_stats/: __init__.py  config.py  database.py  main.py
src/chess_stats/models/: __init__.py  achievement.py  game.py  move_stats.py  player.py  rating_snapshot.py  sync_log.py
src/chess_stats/routes/: achievements.py  analysis.py  charts.py  insights.py  sync.py  training.py
src/chess_stats/services/: achievements.py  analysis.py  chesscom_client.py  chesscom_web.py  sync.py
src/chess_stats/static/: manifest.json
src/chess_stats/static/css/: app.css
src/chess_stats/static/js/: achievements.js  app.js  charts.js
src/chess_stats/templates/: achievements.html  base.html  index.html
