[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-stats"
version = "0.1.0"
description = "Self-hosted chess.com stats tracker and charting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pydantic-settings>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chess_stats = ["templates/**/*", "static/**/*"]
